example/test_data/1.health-probe-issue.yaml
# This file is used to test the health probe validation.
# It contains a Deployment with a wrong health probe configuration.
# The HTTP GET request is configured to use a non-existent port (30).

apiVersion: v1  
kind: Namespace  
metadata:  
  name: web-test  

---
apiVersion: apps/v1
kind: Deployment
metadata:
  generation: 1
  labels:
    app: web
  name: web
  namespace: web-test
spec:
  progressDeadlineSeconds: 600
  replicas: 2
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: web
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: web
    spec:
      containers:
      - image: httpd
        imagePullPolicy: Always
        name: web
        ports:
        - containerPort: 80
          protocol: TCP
        readinessProbe:
          failureThreshold: 3
          httpGet:
            path: /
            port: 30 # This is the wrong port
            scheme: HTTP
          initialDelaySeconds: 3
          periodSeconds: 3
          successThreshold: 1
          timeoutSeconds: 1
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
